config/webhook/manifests/webhook_configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: eviction-webhook
webhooks:
  - name: eviction.mydomain.com
    clientConfig:
      service:
        name: eviction-webhook-service
        namespace: system
        path: /validate-eviction
      # how is this generated. 
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1VENDQWMwQ0ZFR21sdVVJazMrUnJzdEFaNXNPblJZN1BERU5NQTBHQ1NxR1NJYjNEUUVCQ3dVQU1DOHgKTFRBckJnTlZCQU1NSkdWMmFXTjBhVzl1TFhkbFltaHZiMnN0YzJWeWRtbGpaUzVrWldaaGRXeDBMbk4yWXpBZQpGdzB5TkRBMk1UTXlNVFF5TVRoYUZ3MHlOVEEyTVRNeU1UUXlNVGhhTUM4eExUQXJCZ05WQkFNTUpHVjJhV04wCmFXOXVMWGRsWW1odmIyc3RjMlZ5ZG1salpTNWtaV1poZFd4MExuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUIKQlFBRGdnRVBBRENDQVFvQ2dnRUJBTE8xR2JDQ0dsOXJlRlpKSEJ3M3JFMlozZXNxdGpNbHlnRXJtc2NlbGtZeApGLzNTZWh5L09F [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods/eviction"]
    admissionReviewVersions: ["v1"]
    sideEffects: None #hmmm unfamilar with this wonder why a "validating" webhook would ever have side effects
    failurePolicy: Ignore
